--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,46 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
+  text-align: left;
+  margin: 2%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.red-cards {
+  padding: 0px;
+  color: red;
+  font-size: 130px;
+  text-align: left;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  text-align: left;
+}
+
+.footer {
+  text-align: right;
+}
+
+.header,
+.footer {
+  font-size: 25px;
+}
+
+.card {
+  width: 105px;
+  height: 160px;
+  border: 2px solid black;
+  border-radius: 3px;
+  text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.symbol {
+  font-size: 80px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.face-down-card {
+  background-color: darkgray;
 }
