--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   width: 100%;
   height: 100%;
   text-align: left;
@@ -35,6 +34,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  cursor: pointer;
 }
 
 .symbol {
@@ -43,4 +43,12 @@
 
 .face-down-card {
   background-color: darkgray;
+}
+
+.pile {
+  display: flex;
+  flex-direction: row;
+  align-content: space-between;
+  justify-content: space-between;
+  width: 18%;
 }
