--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   width: 100%;
   height: 100%;
-  text-align: left;
-  margin: 2%;
+  margin: 1%;
 }
 
 .red-cards {
@@ -58,10 +57,10 @@
   flex-direction: row;
   justify-content: space-between;
   width: 90%;
+  margin-left:2%;
 }
 
 .four-foundation {
-  margin-right: 1%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
